normal done//. goin to loader

--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
         <img src="https://uploads-ssl.webflow.com/5f2429f172d117fcee10e819/5f7f87c8b81a6e7a214312f0_header.svg" alt="">
         <i class="ri-menu-fill"></i>
         </nav>
+        <div id="blocks">
+            <div id="blk1" class="blk">
+                <div class="img"><img src="https://uploads-ssl.webflow.com/5f9085a4041dd5427c5ac8ae/615d9672cc65f12c9ab25f21_thumbnail-small.jpeg?" alt="img"></div>
+                <h4>AVRO | KO <span>NEW</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur error ducimus quo aspernatur earum nisi!</p>
+            </div>
+            <div id="blk2" class="blk">
+                <h2>ALL WORK!</h2>
+                <h3>A Featured selection <br> the latest work-<br>of last Year</h3>
+                <h6><strong>TIP!</strong> Drag sideways to navigate</h6>
+            </div>
+            <div id="blk3" class="blk">
+                <div class="img"><img src="https://uploads-ssl.webflow.com/5f9085a4041dd5427c5ac8ae/645b5439577bd35377de8c43_thumbnail-small.webp?" alt="img"></div>
+                <h4>THE ROGER HUB <span>NEW</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores magni rerum aperiam fugit eligendi inventore.</p>
+            </div>
+        </div>
+        <h1>MIRANDA</h1>
+        <div id="marinda"></div>
        </div> 
     </div>
 </body>
